--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -2,10 +2,9 @@
 <android.support.v7.widget.Toolbar
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:id="@+id/toolbar"
-	app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+	android:id="@+id/toolbarLayout"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:minHeight="?attr/actionBarSize"
-	android:background="?attr/colorPrimary"
+	android:background="@color/red"
 	android:elevation="2dp"/>
