--- a/app/src/main/res/values-v21/themes.xml
+++ b/app/src/main/res/values-v21/themes.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+	<style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
 		<item name="android:colorPrimaryDark">@color/redDark</item>
 		<item name="android:colorPrimary">@color/red</item>
+		<item name="android:textColorPrimary">@color/white</item>
+		<item name="android:windowActionBar">false</item>
+		<item name="android:textColor">@color/black</item>
+		<item name="android:textAppearanceButton">@color/black</item>
+		<item name="android:editTextColor">@color/black</item>
 	</style>
 </resources>
