--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 	<color name="darkGrey">#222222</color>
 	<color name="superLightGrey">#DDDDDD</color>
 	<color name="grey">#777777</color>
+	<color name="black">#000000</color>
 </resources>
