--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,5 +52,11 @@
 			android:layout_alignParentStart="true"
 			android:layout_alignParentRight="true"
 			android:layout_alignParentEnd="true" />
+		<CheckBox
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Remember me"
+			android:id="@+id/remember"
+			android:layout_below="@id/login_button"/>
 	</RelativeLayout>
 </RelativeLayout>
