--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,56 +1,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+				>
 	<include layout="@layout/toolbar"
 	         android:id="@+id/toolbar"/>
-	<RelativeLayout android:layout_width="match_parent"
-	                android:layout_height="match_parent"
-	                android:paddingLeft="@dimen/activity_horizontal_margin"
-	                android:paddingRight="@dimen/activity_horizontal_margin"
-	                android:paddingTop="@dimen/activity_vertical_margin"
-	                android:paddingBottom="@dimen/activity_vertical_margin"
-	                tools:context=".MainActivity"
-	                android:layout_below="@+id/toolbar">
-
-		<TextView
-			android:layout_width="wrap_content"
+	<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+	                                   xmlns:tools="http://schemas.android.com/tools"
+	                                   android:id="@+id/pager"
+	                                   android:layout_width="match_parent"
+	                                   android:layout_height="match_parent"
+	                                   android:layout_below="@+id/toolbar"
+	                                   tools:context="com.adibalwani.sbumealplanner.MainActivity">
+		<android.support.v4.view.PagerTabStrip
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:text="Current Balance"
-			android:id="@+id/balanceText"
-			android:layout_alignParentTop="true"
-			android:layout_alignParentLeft="true"
-			android:layout_alignParentStart="true"/>
+			android:layout_gravity="top"
+			android:paddingBottom="10dp"
+			android:paddingTop="10dp"
+			android:textColor="#000000" />
+		</android.support.v4.view.ViewPager>
 
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:text=""
-			android:id="@+id/balance"
-			android:layout_alignParentTop="true"
-			android:layout_alignParentRight="true"
-			android:layout_alignParentEnd="true"/>
-
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:text="Budget Per Day"
-			android:id="@+id/budgetText"
-			android:layout_below="@+id/balanceText"
-			android:layout_alignParentLeft="true"
-			android:layout_alignParentStart="true"/>
-
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:text=""
-			android:id="@+id/budget"
-			android:layout_below="@+id/balance"
-			android:layout_alignParentRight="true"
-			android:layout_alignParentEnd="true"/>
-	</RelativeLayout>
 </RelativeLayout>
