--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-				>
-	<include layout="@layout/toolbar"
-	         android:id="@+id/toolbar"/>
-	<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-	                                   xmlns:tools="http://schemas.android.com/tools"
-	                                   android:id="@+id/pager"
-	                                   android:layout_width="match_parent"
-	                                   android:layout_height="match_parent"
-	                                   android:layout_below="@+id/toolbar"
-	                                   tools:context="com.adibalwani.sbumealplanner.MainActivity">
-		<android.support.v4.view.PagerTabStrip
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_gravity="top"
-			android:paddingBottom="10dp"
-			android:paddingTop="10dp"
-			android:textColor="#000000" />
-		</android.support.v4.view.ViewPager>
+                android:layout_height="match_parent">
+		<android.support.design.widget.TabLayout
+		android:background="?attr/colorPrimary"
+		android:id="@+id/sliding_tabs"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"/>
+
+		<android.support.v4.view.ViewPager
+		android:id="@+id/viewpager"
+		android:layout_width="match_parent"
+		android:layout_height="0px"
+		android:layout_weight="1"/>
 
 </RelativeLayout>
