--- a/app/src/main/res/layout/fragment_bookstore.xml
+++ b/app/src/main/res/layout/fragment_bookstore.xml
@@ -7,7 +7,7 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 xmlns:android="http://schemas.android.com/apk/res/android"
-                tools:context="com.adibalwani.sbumealplanner.BookstoreFragmenTab">
+                tools:context="com.adibalwani.sbumealplanner.fragments.MainActivity.BookstoreFragmenTab">
 
 	<TextView
 		android:layout_width="wrap_content"
