--- a/app/src/main/res/layout/fragment_wolfie.xml
+++ b/app/src/main/res/layout/fragment_wolfie.xml
@@ -7,7 +7,7 @@
 	android:paddingTop="@dimen/activity_vertical_margin"
 	android:paddingBottom="@dimen/activity_vertical_margin"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	tools:context="com.adibalwani.sbumealplanner.WolfieFragmenTab"
+	tools:context="com.adibalwani.sbumealplanner.fragments.MainActivity.WolfieFragmenTab"
 	xmlns:tools="http://schemas.android.com/tools">
 
 	<TextView
