--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,12 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+			xmlns:app="http://schemas.android.com/apk/res-auto"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			xmlns:tools="http://schemas.android.com/tools"
+			android:orientation="vertical"
+			tools:context="com.adibalwani.sbumealplanner.activities.MainActivity">
 		<android.support.design.widget.TabLayout
-		android:background="?attr/colorPrimary"
+			style="@style/MyCustomTabLayout"
 		android:id="@+id/sliding_tabs"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"/>
@@ -14,4 +17,4 @@
 		android:layout_height="0px"
 		android:layout_weight="1"/>
 
-</RelativeLayout>
+</LinearLayout>
