--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,18 @@
 <resources>
 
+    <style name="MyCustomTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textColor">?android:textColorSecondary</item>
+        <item name="textAllCaps">true</item>
+    </style>
+
+    <style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
+        <item name="tabTextAppearance">@style/MyCustomTabTextAppearance</item>
+        <item name="android:background">?attr/colorPrimary</item>
+        <item name="tabSelectedTextColor">?android:textColorSecondary</item>
+    </style>
+
     <!-- Base application theme. -->
-    <style name="Base.Theme.HMKCodeApp" parent="Theme.AppCompat">
+    <style name="Base.Theme.HMKCodeApp" parent="Theme.AppCompat.Light.DarkActionBar">
 
         <item name="colorPrimary">@color/primary</item>
 
@@ -11,14 +22,7 @@
         <!--   theme UI controls like checkboxes and text fields e.g. FloatActionButton -->
         <item name="colorAccent">@color/accent</item>
 
-        <!-- Title Text Color -->
-        <item name="android:textColorPrimary">@color/primary_text</item>
-
-        <!-- color of the menu overflow icon (three vertical dots) -->
-        <item name="android:textColorSecondary">@color/secondary_text</item>
-
-
-        <item name="android:windowBackground">@color/window_background</item>
+        <item name="android:textColorSecondary">@color/primary_text</item>
     </style>
 
     <!--
